@@ -75,19 +75,19 @@ public class ConfigurerImplTest extends Assert {
         assertEquals("Unexpected value for attribute integerAttr", 
                      BigInteger.ONE, sb.getIntegerAttr());
         assertEquals("Unexpected value for attribute intAttr", 
-                     new Integer(2), sb.getIntAttr());
+                     Integer.valueOf(2), sb.getIntAttr());
         assertEquals("Unexpected value for attribute longAttr", 
-                     new Long(3L), sb.getLongAttr());
+                     Long.valueOf(3L), sb.getLongAttr());
         assertEquals("Unexpected value for attribute shortAttr", 
-                     new Short((short)4), sb.getShortAttr());
+                     Short.valueOf((short)4), sb.getShortAttr());
         assertEquals("Unexpected value for attribute decimalAttr", 
                      new BigDecimal("5"), sb.getDecimalAttr());
         assertEquals("Unexpected value for attribute floatAttr", 
                      new Float(6F), sb.getFloatAttr());
         assertEquals("Unexpected value for attribute doubleAttr", 
-                     new Double(7D), sb.getDoubleAttr());
+                     Double.valueOf(7.0D), sb.getDoubleAttr());
         assertEquals("Unexpected value for attribute byteAttr", 
-                     new Byte((byte)8), sb.getByteAttr());
+                     Byte.valueOf((byte)8), sb.getByteAttr());
         
         QName qn = sb.getQnameAttr();
         assertEquals("Unexpected value for attribute qnameAttrNoDefault", 
@@ -108,11 +108,11 @@ public class ConfigurerImplTest extends Assert {
         }
         
         assertEquals("Unexpected value for attribute unsignedIntAttrNoDefault", 
-                     new Long(9L), sb.getUnsignedIntAttr());
+                     Long.valueOf(9L), sb.getUnsignedIntAttr());
         assertEquals("Unexpected value for attribute unsignedShortAttrNoDefault", 
-                     new Integer(10), sb.getUnsignedShortAttr());
+                     Integer.valueOf(10), sb.getUnsignedShortAttr());
         assertEquals("Unexpected value for attribute unsignedByteAttrNoDefault", 
-                     new Short((short)11), sb.getUnsignedByteAttr());
+                     Short.valueOf((short)11), sb.getUnsignedByteAttr());
     }
     
     @Test
@@ -142,26 +142,26 @@ public class ConfigurerImplTest extends Assert {
         assertEquals("Unexpected value for attribute integerAttr", 
                      BigInteger.TEN, sb.getIntegerAttr());
         assertEquals("Unexpected value for attribute intAttr", 
-                     new Integer(12), sb.getIntAttr());
+                     Integer.valueOf(12), sb.getIntAttr());
         assertEquals("Unexpected value for attribute longAttr", 
-                     new Long(13L), sb.getLongAttr());
+                     Long.valueOf(13L), sb.getLongAttr());
         assertEquals("Unexpected value for attribute shortAttr", 
-                     new Short((short)14), sb.getShortAttr());
+                     Short.valueOf((short)14), sb.getShortAttr());
         assertEquals("Unexpected value for attribute decimalAttr", 
                      new BigDecimal("15"), sb.getDecimalAttr());
         assertEquals("Unexpected value for attribute floatAttr", 
                      new Float(16F), sb.getFloatAttr());
         assertEquals("Unexpected value for attribute doubleAttr", 
-                     new Double(17D), sb.getDoubleAttr());
+                     Double.valueOf(17D), sb.getDoubleAttr());
         assertEquals("Unexpected value for attribute byteAttr", 
-                     new Byte((byte)18), sb.getByteAttr());
+                     Byte.valueOf((byte)18), sb.getByteAttr());
         
         assertEquals("Unexpected value for attribute unsignedIntAttrNoDefault", 
-                     new Long(19L), sb.getUnsignedIntAttr());
+                     Long.valueOf(19L), sb.getUnsignedIntAttr());
         assertEquals("Unexpected value for attribute unsignedShortAttrNoDefault", 
-                     new Integer(20), sb.getUnsignedShortAttr());
+                     Integer.valueOf(20), sb.getUnsignedShortAttr());
         assertEquals("Unexpected value for attribute unsignedByteAttrNoDefault", 
-                     new Short((short)21), sb.getUnsignedByteAttr());
+                     Short.valueOf((short)21), sb.getUnsignedByteAttr());
     }
     
     @Test
@@ -246,19 +246,19 @@ public class ConfigurerImplTest extends Assert {
         private String stringAttr = "hello";
         private Boolean booleanAttr = Boolean.TRUE;
         private BigInteger integerAttr = BigInteger.ONE;
-        private Integer intAttr = new Integer(2);
-        private Long longAttr = new Long(3);
-        private Short shortAttr = new Short((short)4);
+        private Integer intAttr = Integer.valueOf(2);
+        private Long longAttr = Long.valueOf(3);
+        private Short shortAttr = Short.valueOf((short)4);
         private BigDecimal decimalAttr = new BigDecimal("5");
         private Float floatAttr = new Float(6F);
-        private Double doubleAttr = new Double(7D);
-        private Byte byteAttr = new Byte((byte)8);
+        private Double doubleAttr = Double.valueOf(7D);
+        private Byte byteAttr = Byte.valueOf((byte)8);
         private QName qnameAttr = new QName("http://www.w3.org/2001/XMLSchema", "schema", "xs");
         private byte[] base64BinaryAttr = DatatypeConverter.parseBase64Binary("abcd");
         private byte[] hexBinaryAttr = new HexBinaryAdapter().unmarshal("aaaa");
-        private Long unsignedIntAttr = new Long(9);
-        private Integer unsignedShortAttr = new Integer(10);
-        private Short unsignedByteAttr = new Short((short)11);
+        private Long unsignedIntAttr = Long.valueOf(9);
+        private Integer unsignedShortAttr = Integer.valueOf(10);
+        private Short unsignedByteAttr = Short.valueOf((short)11);
  
         
         SimpleBean(String bn) {
